Fix CSS letter alignment and size

--- a/assets/boardStyle.css
+++ b/assets/boardStyle.css
@@ -27,11 +27,13 @@
   background: white;
   height: 100px;
   width: 100px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .letter {
   color: blue;
-  font: 36px sans-serif;
+  font: 42px sans-serif;
   font-weight: bold;
-  text-align: center;
 }
